cards correct alignment commit

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ body{
 
 section, article{
     max-width: 400px;
-    margin: auto; 
+    margin: 0 auto; 
     margin-bottom: 1.5rem;  
     
 }
@@ -151,7 +151,7 @@ article{
    .cards{
       display: flex;
       justify-content: center;
-      /* align-items: center; */
+      align-items: center;
       gap: 2rem;
       
       margin-top: 5rem;
